[package]
name = "pid"
version = "0.1.0"
authors = ["Abdulmelik Bekmez <abdulmelikbekmez@gmail.com>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.7.0"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
eframe = "0.22.0"
